# ParallelComputing_TerrainGenerator

./: CMakeLists.txt  README.md
include/: constants.h  cpu_terrain.h  gpu_terrain.cuh  utils.h
src/: cpu_terrain.cpp  gpu_terrain.cu  main.cpp  utils.cpp
